fixes loss of button on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body{
     left: 0px;
     position: fixed;
     bottom: 0;
+    @media only screen and(max-device-height:480px){
+        height: 25%;
+    }
+
     height: 20%;
     width: 100%;
     display: block;
@@ -20,10 +24,12 @@ body{
     margin-right: 5px;
     width: 64px;
     height: 64px;
+    border-style: solid;
+    border-width: 1px;
 }
 #gestures div{
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 1px;
+    margin-right: 1px;
     padding-left: 0px;
     padding-right: 0px;
 }
